--- a/main/templates/approve.html
+++ b/main/templates/approve.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="content">
+        <p class="attention-txt">loading may take a brief moment depending on the amount of data, if you have problems refresh with CTRL + F5</p>
 
     </div>
 </body>
