--- a/main/templates/stats.html
+++ b/main/templates/stats.html
@@ -45,17 +45,17 @@
                 </div>
                 <nav class="stats-nav">
                     <ul>
-                        <li><img src="../static/img/star-white.svg"><span class="clear yellow-text" data-id="1">MVP</span></li>
+                        <li><img src="../static/img/team-icon.svg"><span class="clear yellow-text" data-id="1">TABELA</span></li>
                         <li><img src="../static/img/football-icon.svg"><span class="clear" data-id="2">STRZELCY</span></li>
-                        <li><img src="../static/img/keeper-gloves.svg"><span class="clear" data-id="3">BRAMKARZE</span></li>
-                        <li><img src="../static/img/team-icon.svg"><span class="clear" data-id="4">DRUŻYNY</span></li>
+                        <li><img src="../static/img/star-white.svg"><span class="clear" data-id="3">MVP</span></li>
+                        <li><img src="../static/img/keeper-gloves.svg"><span class="clear" data-id="4">BRAMKARZE</span></li>
                     </ul>
                 </nav>
             </div>
             <div class="values-headline">
                 <div class="values-headline-container">
                     <div class="headline-container__value">
-                        <span class="yellow-text sortbutton" id="sort1">MVP</span>
+                        <span class="yellow-text sortbutton" id="sort1">PUNKTY</span>
                         <img src="../static/img/ascending-arrow.svg" id="arrow1" class="arrow reversed"></img>
                     </div>
                     <div class="headline-container__value">
