--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -40,7 +40,7 @@
         <footer class="footer" id="kontakt">
             <div class="footer-copyright-container">
                 <div class="footer-copyright__icon"><img src="../static/img/copyright-icon.svg" alt="Ikona copyright"></div>
-                <div class="footer-copyright__text">2023 Maciej Budzich | Krzysztof Maron | wszelkie prawa zastrzeżone</div>
+                <div class="footer-copyright__text">2023 Krzysztof Maron | Maciej Budzich | wszelkie prawa zastrzeżone</div>
             </div>
             <div class="footer-socials-container">
                 <div class="footer-socials-facebook-container">
@@ -49,7 +49,7 @@
                 </div>
                 <div class="footer-socials-mail-container">
                     <div class="footer-socials-mail__icon"><img src="../static/img/mail-icon.svg" alt="Ikona mail"></div>
-                    <div class="footer-socials-mail__text">miniligakopia@gmail.com</div>
+                    <div class="footer-socials-mail__text">miniligakrakow@gmail.com</div>
                 </div>
             </div>
             <img class="footer-logo" src="../static/img/logo.png" alt="logo miniligi">
