--- a/main/templates/stats.html
+++ b/main/templates/stats.html
@@ -42,6 +42,7 @@
                     <img src="../static/img/2.png" class="filter" id="f2">
                     <img src="../static/img/3.png" class="filter" id="f3">
                     <img src="../static/img/4.png" class="filter" id="f4">
+                    <img src="../static/img/5.png" class="filter" id="f5">
                 </div>
                 <nav class="stats-nav">
                     <ul>
