Teams subpage update

--- a/main/templates/teamOverview.html
+++ b/main/templates/teamOverview.html
@@ -66,11 +66,11 @@
                     </div>
                     <div class="team-details__streak">
                         <ul id="streak">
-                            <li class="streak__win">W</li>
-                            <li class="streak__lose">L</li>
-                            <li class="streak__lose">L</li>
-                            <li class="streak__win">W</li>
-                            <li class="streak__win">W</li>
+                            <li class="streak__win"></li>
+                            <li class="streak__lose"></li>
+                            <li class="streak__lose"></li>
+                            <li class="streak__win"></li>
+                            <li class="streak__win"></li>
                         </ul>
                     </div>
                 </div>
