--- a/main/templates/teams.html
+++ b/main/templates/teams.html
@@ -43,6 +43,7 @@
                     <img src="../static/img/2.png" class="filter" id="f2">
                     <img src="../static/img/3.png" class="filter" id="f3">
                     <img src="../static/img/4.png" class="filter" id="f4">
+                    <img src="../static/img/4.png" class="filter" id="f5">
                 </div>
             </div>
             <div class="glass-panel-content" style="height: 85% !important">
