--- a/main/static/css/stats.css
+++ b/main/static/css/stats.css
@@ -213,10 +213,10 @@
     cursor: pointer;
     width: 4vh;
     height: 4vh;
+    transition: .15s ease-out;
   }
   .rotated{
-    transform:rotate(90deg);
-    animation: filterrotate 0.2s linear;
+    transform: rotate(90deg);
   }
 
   .glass-panel-content {
@@ -342,15 +342,6 @@
     width: 50%;
   }
   
-  @keyframes filterrotate {
-    0%{
-      transform:rotate(0deg)
-    }100%{
-      transform:rotate(90deg)
-    }
-  }
-
-  
   .values-headline .values-headline-container .headline-container__value span {
     color: #fff;
     text-align: center;
@@ -416,28 +407,37 @@
   }
   
   .filter-bar{
-    display: none;
+    display: flex;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
     background-color: rgba(0, 0, 0, 0.150);
     width: 6%;
-    height: 300%;
+    height: auto;
     border-left: 0.5px solid rgba(0, 0, 0, 0.300);
     border-bottom: 0.5px solid rgba(0, 0, 0, 0.300);
     position: absolute;
     right: 0;
     top: 10vh;
     border-bottom-left-radius: 30px;
-    display:none;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 8%;
+    gap: 1vw;
     z-index: 3;
-  
-    animation: unfolding 0.2s linear;
+    opacity: 0;
+    pointer-events: none;
+    transform-origin: top;
+    transform: scaleY(0);
+    transition: .15s ease-out;
+  }
+  .shown {
+    opacity: 1;
+    pointer-events: all;
+    transform: scaleY(1);
   }
   .filter-bar img{
     aspect-ratio: 1;
-    height: 12%;
+    height: 2vw;
     cursor: pointer;
     opacity: 50%;
   }
