--- a/main/templates/teams.html
+++ b/main/templates/teams.html
@@ -39,13 +39,13 @@
                     <img class="glass-panel-filter__icon" src="../static/img/filter-icon.svg">
                 </div>
                 <div class="filter-bar">
-                    <img src="../static/img/1.png" class="filter filter-active" id="f1">
-                    <img src="../static/img/2.png" class="filter" id="f2">
-                    <img src="../static/img/3.png" class="filter" id="f3">
-                    <img src="../static/img/4.png" class="filter" id="f4">
-                    <img src="../static/img/5.png" class="filter" id="f5">
-                    <img src="../static/img/6.png" class="filter" id="f6">
-                    <img src="../static/img/7.png" class="filter" id="f7">
+                    {% for league in leagues %}
+                        {% if league.leagueID == 1 %}
+                            <img src="../static/img/{{league.leagueID}}.png" class="filter filter-active" id="f{{league.leagueID}}">
+                        {% else %}
+                            <img src="../static/img/{{league.leagueID}}.png" class="filter" id="f{{league.leagueID}}">
+                        {% endif %}
+                    {% endfor %}
                 </div>
             </div>
             <div class="glass-panel-content" style="height: 85% !important">
