--- a/main/templates/adding.html
+++ b/main/templates/adding.html
@@ -7,6 +7,10 @@
     <script defer src="../static/js/adding.js"></script>
 </head>
 <body>
+    <span id="exclamation">
+        <button id="exc-close-btn" class="">×</button>
+        <span>Każdy zawodnik uczestniczący w meczu powinien mieć zaznaczone "GRAŁ" <br>Każdy zawodnik powinien mieć wypełnione punkty MVP i BRAMKARZA</span>
+    </span>
     <div class="content">
         <form id="myform">
             <div class="banner">
