--- a/main/static/css/adding.css
+++ b/main/static/css/adding.css
@@ -302,3 +302,36 @@ body {
   background-color: rgb(83, 83, 83) !important;
   color: gray !important;
 }
+
+#exclamation {
+  display: flex;
+  position: fixed;
+  bottom: 12px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: red;
+  padding: 12px;
+  z-index: 99;
+  user-select: none;
+}
+#exclamation span {
+  width: 35vw;
+  text-align: center;
+}
+#exclamation button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: white;
+  background-color: rgb(255, 0, 0);
+  border: none;
+  width: 1vw;
+  height: 1vw;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+#exclamation.hidden-by-user {
+  pointer-events: none;
+  display: none;
+}
