--- a/main/templates/adding.html
+++ b/main/templates/adding.html
@@ -8,8 +8,21 @@
 </head>
 <body>
     <span id="exclamation">
-        <button id="exc-close-btn" class="">×</button>
-        <span>Każdy zawodnik uczestniczący w meczu powinien mieć zaznaczone "GRAŁ" <br>Każdy zawodnik powinien mieć wypełnione punkty MVP i BRAMKARZA</span>
+        <button id="exc-close-btn" class="">▼ close</button>
+        <span>
+            <b>Zasady przyznawania pkt. Bramkarza:</b><br>
+            0-3 stracone bramki - max 10pkt<br>
+            4-8 stracone bramki - max 9pkt<br>
+            9-13 stracone bramki - max 8pkt<br>
+            14+ stracone bramki - max 7pkt<br> 
+        </span>
+        <span>
+            <b>Zasady przyznawania pkt. MVP:</b><br>
+            Najlepszy zawodnik <b>wygranej</b> drużyny - 5pkt<br>
+            Drugi najlepszy zawodnik <b>wygranej</b> drużyny - 1pkt<br>
+            Najlepszy zawodnik <b>przegranej</b> drużyny - 3pkt<br>
+            W przypadku <b>remisu</b> 5pkt dla najlepszych zawodników obu drużyn<br> 
+        </span>
     </span>
     <div class="content">
         <form id="myform">
