--- a/main/static/css/adding.css
+++ b/main/static/css/adding.css
@@ -313,25 +313,25 @@ body {
   padding: 12px;
   z-index: 99;
   user-select: none;
-}
-#exclamation span {
-  width: 35vw;
-  text-align: center;
+  gap: 5vw;
+  line-height: 2vw;
+  width: 50vw;
 }
 #exclamation button {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 4px;
+  top: 4px;
   color: white;
   background-color: rgb(255, 0, 0);
   border: none;
-  width: 1vw;
+  width: 4vw;
   height: 1vw;
   cursor: pointer;
   font-size: 1rem;
+  text-decoration: underline;
 }
 
-#exclamation.hidden-by-user {
-  pointer-events: none;
+#exclamation.hidden-by-user span {
   display: none;
+  pointer-events: none;
 }
