--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -7,6 +7,7 @@
     <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap%27' rel='stylesheet'>
 
     <link rel="icon" href="../static/img/logo.png">
+    <link rel="stylesheet" href="../static/css/common.css">
     <link rel="stylesheet" href="../static/css/miniliga.css">
     <script type="module" src="../static/js/miniliga.js"></script>
 </head>
@@ -39,8 +40,11 @@
         </header>
         <footer class="footer" id="kontakt">
             <div class="footer-copyright-container">
-                <div class="footer-copyright__icon"><img src="../static/img/copyright-icon.svg" alt="Ikona copyright"></div>
-                <div class="footer-copyright__text">2023 Krzysztof Maron | Maciej Budzich | wszelkie prawa zastrzeżone</div>
+                <div class="footer-copyright__text">&copy; 2025 Krzysztof Maron | Maciej Budzich | wszelkie prawa zastrzeżone</div>
+            </div>
+            <div class="footer-logos-container">
+                <img class="footer-logo" src="../static/img/logo.png" alt="logo miniligi">
+                <img src="../static/img/msit.png" alt="" class="msit-logo">
             </div>
             <div class="footer-socials-container">
                 <div class="footer-socials-facebook-container">
@@ -52,7 +56,6 @@
                     <div class="footer-socials-mail__text">miniligakrakow@gmail.com</div>
                 </div>
             </div>
-            <img class="footer-logo" src="../static/img/logo.png" alt="logo miniligi">
         </footer>
     </div>
 </body>
