--- a/main/templates/teamOverview.html
+++ b/main/templates/teamOverview.html
@@ -7,6 +7,7 @@
 
     <link rel="icon" href="../static/img/logo.png">
     <link rel="stylesheet" href="../static/css/teamOverview.css">
+    <link rel="stylesheet" href="../static/css/common.css">
     <script type="module" src="../static/js/teamOverview.js"></script>
 </head>
 <body>
@@ -102,8 +103,11 @@
         </header>
         <footer class="footer" id="kontakt">
             <div class="footer-copyright-container">
-                <div class="footer-copyright__icon"><img src="../static/img/copyright-icon.svg" alt="Ikona copyright"></div>
-                <div class="footer-copyright__text">2023 Maciej Budzich | Krzysztof Maron | wszelkie prawa zastrzeżone</div>
+                <div class="footer-copyright__text">&copy; 2025 Krzysztof Maron | Maciej Budzich | wszelkie prawa zastrzeżone</div>
+            </div>
+            <div class="footer-logos-container">
+                <img class="footer-logo" src="../static/img/logo.png" alt="logo miniligi">
+                <img src="../static/img/msit.png" alt="" class="msit-logo">
             </div>
             <div class="footer-socials-container">
                 <div class="footer-socials-facebook-container">
@@ -112,10 +116,9 @@
                 </div>
                 <div class="footer-socials-mail-container">
                     <div class="footer-socials-mail__icon"><img src="../static/img/mail-icon.svg" alt="Ikona mail"></div>
-                    <div class="footer-socials-mail__text">miniliga@gmail.com</div>
+                    <div class="footer-socials-mail__text">miniligakrakow@gmail.com</div>
                 </div>
             </div>
-            <img class="footer-logo" src="../static/img/logo.png" alt="logo miniligi">
         </footer>
     </div>
 </body>
